--- a/DonePad/View/View/KeyboardTextView.xib
+++ b/DonePad/View/View/KeyboardTextView.xib
@@ -49,16 +49,16 @@
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" verticalHuggingPriority="252" translatesAutoresizingMaskIntoConstraints="NO" id="vh1-a3-ct8" customClass="DeadlineView" customModule="DonePad" customModuleProvider="target">
-                    <rect key="frame" x="60" y="62" width="200" height="20"/>
+                    <rect key="frame" x="60" y="58" width="200" height="24"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QAe-jH-oNN">
-                            <rect key="frame" x="0.0" y="0.0" width="37.5" height="20"/>
+                            <rect key="frame" x="0.0" y="4" width="37.5" height="20"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ux4-V5-HPY">
-                            <rect key="frame" x="45.5" y="0.0" width="20" height="20"/>
+                            <rect key="frame" x="45.5" y="4" width="20" height="20"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="20" id="ct1-pg-hpm"/>
@@ -74,18 +74,18 @@
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="QAe-jH-oNN" secondAttribute="bottom" id="JhJ-SJ-J7M"/>
-                        <constraint firstAttribute="height" constant="20" id="PH1-p0-fxb"/>
+                        <constraint firstAttribute="height" constant="24" id="PH1-p0-fxb"/>
                         <constraint firstItem="Ux4-V5-HPY" firstAttribute="leading" secondItem="QAe-jH-oNN" secondAttribute="trailing" constant="8" id="TST-X4-QC0"/>
                         <constraint firstAttribute="bottom" secondItem="Ux4-V5-HPY" secondAttribute="bottom" id="g4d-7C-Jtw"/>
-                        <constraint firstItem="QAe-jH-oNN" firstAttribute="top" secondItem="vh1-a3-ct8" secondAttribute="top" id="t7p-yj-E45"/>
-                        <constraint firstItem="Ux4-V5-HPY" firstAttribute="top" secondItem="vh1-a3-ct8" secondAttribute="top" id="vwS-hu-CxQ"/>
+                        <constraint firstItem="QAe-jH-oNN" firstAttribute="top" secondItem="vh1-a3-ct8" secondAttribute="top" constant="4" id="t7p-yj-E45"/>
+                        <constraint firstItem="Ux4-V5-HPY" firstAttribute="top" secondItem="vh1-a3-ct8" secondAttribute="top" constant="4" id="vwS-hu-CxQ"/>
                         <constraint firstItem="QAe-jH-oNN" firstAttribute="leading" secondItem="vh1-a3-ct8" secondAttribute="leading" id="xiK-qH-2IB"/>
                     </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" red="0.90196078431372551" green="0.90196078431372551" blue="0.90196078431372551" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="vh1-a3-ct8" firstAttribute="top" secondItem="j7g-w9-BIA" secondAttribute="bottom" constant="4" id="1WT-Lt-Abw"/>
+                <constraint firstItem="vh1-a3-ct8" firstAttribute="top" secondItem="j7g-w9-BIA" secondAttribute="bottom" id="1WT-Lt-Abw"/>
                 <constraint firstItem="j7g-w9-BIA" firstAttribute="top" secondItem="GBf-X5-7fv" secondAttribute="top" id="95t-78-sVz"/>
                 <constraint firstItem="vh1-a3-ct8" firstAttribute="leading" secondItem="j7g-w9-BIA" secondAttribute="leading" id="ESt-Xj-fIp"/>
                 <constraint firstItem="eHj-zW-NLt" firstAttribute="leading" secondItem="j7g-w9-BIA" secondAttribute="trailing" constant="8" id="EdS-I6-dUT"/>
@@ -105,6 +105,7 @@
                 <outlet property="alermButton" destination="GBf-X5-7fv" id="9HF-1h-BUX"/>
                 <outlet property="deadlineClearButton" destination="Ux4-V5-HPY" id="ryL-hP-c6e"/>
                 <outlet property="deadlineLabel" destination="QAe-jH-oNN" id="dZe-Kp-ME3"/>
+                <outlet property="deadlineViewHeight" destination="PH1-p0-fxb" id="5Ax-Jw-yQn"/>
                 <outlet property="sendButton" destination="eHj-zW-NLt" id="zJa-DS-OBq"/>
                 <outlet property="textView" destination="j7g-w9-BIA" id="ai0-Nh-wwp"/>
             </connections>
