--- a/DonePad/View/StoryBoard/TutorialViewController.storyboard
+++ b/DonePad/View/StoryBoard/TutorialViewController.storyboard
@@ -27,6 +27,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="978-ly-qnP">
                                 <rect key="frame" x="172" y="89" width="30" height="30"/>
                                 <state key="normal" title="OK"/>
+                                <connections>
+                                    <action selector="tapButton:" destination="Qcu-EE-HhG" eventType="touchUpInside" id="svn-vI-QqD"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -39,6 +42,9 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="cpR-MJ-1Qe"/>
                     </view>
+                    <connections>
+                        <outlet property="messageLabel" destination="pKm-by-urh" id="woN-cW-Abe"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VZo-JY-FaY" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
